--- a/index.html
+++ b/index.html
@@ -374,5 +374,12 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="container">
+        <p href="#">
+          Made by <a href="https://github.com/xleyzor">Ömer Toyga</a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
